# dish

./: inject.py  inject_by_by_parameter_name.py  inject_by_type.py  inject_scopes.py  main.py  pyproject.toml
